# addict

./: .gitignore
addict/: ContentView.swift  Persistence.swift  WordCardController.swift  addictApp.swift
addict/addict.xcdatamodeld/: .xccurrentversion
addictTests/: addictTests.swift
addictUITests/: addictUITests.swift  addictUITestsLaunchTests.swift
dictionary-source/: README.md  pyproject.toml
dictionary-source/notebooks/: download.ipynb  example.ipynb
