[tool.poetry]
name = "dictionary-source"
version = "0.1.0"
description = ""
authors = ["antonsolovev <tonycoxbk@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = {extras = ["server"], version = "^0.1.83"}
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
